--- a/amplify.yml
+++ b/amplify.yml
@@ -1,1 +1,24 @@
-
+version: 1
+backend:
+  phases:
+    build:
+      commands:
+        - npm ci --cache .npm --prefer-offline
+        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
+frontend:
+    phases:
+        preBuild:
+            commands:
+        build:
+            commands:
+                - export NODE_OPTIONS=--max-old-space-size=8192
+                - node -e 'console.log(v8.getHeapStatistics().total_available_size/(1024*1024))'  
+                - npm run build
+  artifacts:
+    baseDirectory: dist
+    files:
+      - '**/*'
+  cache:
+    paths:
+      - .npm/**/*
+      - node_modules/**/*
