--- a/amplify.yml
+++ b/amplify.yml
@@ -7,6 +7,10 @@ backend:
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
+    preBuild:
+       commands:
+         - export NODE_OPTIONS=--max-old-space-size=8192
+         - node -e 'console.log(v8.getHeapStatistics().total_available_size/(1024*1024))' 
     build:
       commands:
         - npm run build
