--- a/amplify.yml
+++ b/amplify.yml
@@ -7,9 +7,8 @@ frontend:
         - npm ci --cache .npm --prefer-offline
     build:
       commands:
-        - echo "SECRET=\"$(echo $secrets | jq -r .SECRET)\"" >> .env
-        - echo $secrets
-        - cat .env
+        - echo "fetching parameter value"
+        - echo $(aws ssm get-parameter --name "/amplify/shared/d1i2oiluh7p2pq/SECRET" --with-decryption --query "Parameter.Value" --output text)
         - npm run build
         - printenv
   artifacts:
