--- a/amplify.yml
+++ b/amplify.yml
@@ -4,12 +4,13 @@ frontend:
     preBuild:
       commands:
         - sudo yum install -y jq
+        - sudo yum install -y aws-cli
+        - aws --version
         - npm ci --cache .npm --prefer-offline
     build:
       commands:
         - echo "fetching parameter value"
         - echo $(aws ssm get-parameter --name "/amplify/shared/d1i2oiluh7p2pq/SECRET" --with-decryption --query "Parameter.Value" --output text)
-        - aws --version
         - npm run build
         - printenv
   artifacts:
